[gd_scene load_steps=9 format=2]

[ext_resource path="res://audio/467354__nicklas3799__gun-cock.wav" type="AudioStream" id=1]
[ext_resource path="res://audio/394413__inspectorj__bamboo-swing-a11.wav" type="AudioStream" id=2]
[ext_resource path="res://models/weapons/pistol.obj" type="ArrayMesh" id=3]
[ext_resource path="res://audio/275151__bird-man__gun-shot.wav" type="AudioStream" id=4]
[ext_resource path="res://entities/weapons/Pistol.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
length = 0.5
step = 0.082
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.492 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.00767732, 0.000250787 ), Vector3( 0, 0, -7.45058e-09 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.492 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -14.4464, -3.04538, 0.760419 ), Vector3( 1.86853, -2.95058, -0.0962914 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.492 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flash:light_energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.41 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 16.0, 1.87 ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("GunShot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.008, -0.001, 2.22 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("GunShot")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -7.45058e-09 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1.86853, -2.95058, -0.0962914 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Pistol" type="MeshInstance"]
transform = Transform( 14.9801, -9.63919e-07, -0.771709, 0.192777, 14.5244, 3.74213, 0.747238, -3.74707, 14.5053, 0, 0.00767732, 0.000250787 )
mesh = ExtResource( 3 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
material/6 = null
material/7 = null
material/8 = null
material/9 = null
material/10 = null
material/11 = null
material/12 = null
material/13 = null
script = ExtResource( 5 )
damage = 15
ray_cast_range = 500
fire_anime_speed = 2.29
target_group = "None"
animation_player = NodePath("Anime")
cock_path = NodePath("Cock")
pickup_file = "res://entities/pickups/PistolPickup.tscn"

[node name="Anime" type="AnimationPlayer" parent="."]
anims/Fire = SubResource( 1 )
anims/Hit = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="Flash" type="OmniLight" parent="."]
transform = Transform( 0.0666667, 6.62748e-12, 1.16415e-09, -1.48492e-15, 0.0666667, 1.86928e-09, -2.32831e-10, -1.86265e-09, 0.0666667, 0.00645423, 0.0347296, 0.0372007 )
light_color = Color( 0.882353, 0.886275, 0.298039, 1 )
light_energy = 16.0
omni_range = 2.2

[node name="GunShot" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[node name="Cock" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 1 )

[node name="Rate" type="Timer" parent="."]
[connection signal="tree_entered" from="." to="." method="_on_Pistol_tree_entered"]
[connection signal="animation_finished" from="Anime" to="." method="_on_Anime_animation_finished"]
[connection signal="timeout" from="Rate" to="." method="_on_Rate_timeout"]
